# final-nn

./: autoencoder.ipynb  classifier.ipynb  pyproject.toml  requirements.txt
nn/: nn.py  preprocess.py
test/: test_nn.py
